2011-07-06  Eric Wasylishen  <ewasylishen@gmail.com>

	* configure:
	* Source/NSFontPanel.m:
	* Source/GNUmakefile:
	* Source/GSCharacterPanel.m:
	* configure.ac:
	* Headers/Additions/GNUstepGUI/GSCharacterPanel.h:
	* Headers/Additions/GNUstepGUI/config.h.in:
	* ChangeLog:
	* config:
	* config/icu.m4:
	Add a new character picker panel. It's accessible
	via a button in the font panel.

2011-07-03  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSDisplayServer.m:
	* Headers/Additions/GNUstepGUI/GSDisplayServer.h: Add a new API for taking
	screenshots: -contentsOfScreen:inRect:

2011-07-03  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTextView.m: Use respectFraction: YES when deciding whether
	to do a word selection upon a right click

2011-07-03  Eric Wasylishen  <ewasylishen@gmail.com>

	* TextConverters/RTF/RTFProducer.m: Writing of NSLinkAttributeName; reading
	is still to be implemented.

2011-07-03  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSMenuView.m: Allow any mouse up (left/right/other)
	to choose a menu item.

2011-07-02  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTextView.m (-_updateState:): Invalidate cursor rects
	so the cursor rects over links, for example, are updated when
	text is edited.

2011-07-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSLayoutManager.m (-drawGlyphsForGlyphRange:atPoint:,
	-drawUnderlineForGlyphRange:...:): Add support for for link attributes.

2011-07-03 Riccardo Mottola <rm@gnu.org>

	* Source/NSSliderCell.m:
	Circular sliders never return the maximum value, tested on Apple.

2011-07-02 15:33-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSTableView.m: Modifications to initWithCoder: and
	encodeWithCoder: to handle _sortDescriptors in .gorm files.

2011-07-02 Riccardo Mottola <rm@gnu.org>

	* Source/NSSliderCell.m:
	Fix tick marks with circular sliders.

2011-06-29  Eric Wasylishen  <ewasylishen@gmail.com>
