@@ -1,5 +1,10 @@
 2011-07-06  Eric Wasylishen  <ewasylishen@gmail.com>
 
+	* Tests/gui/NSView/NSView_autoresize_and_rounding.m:
+	Add a test for NSView autoresizing and rounding
+
+2011-07-06  Eric Wasylishen  <ewasylishen@gmail.com>
+
 	* configure:
 	* Source/NSFontPanel.m:
 	* Source/GNUmakefile:
